# nvim-browser

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/nvbrowser/: Cargo.toml
crates/nvbrowser-cli/: Cargo.toml
crates/nvbrowser-cli/src/: main.rs
crates/nvbrowser-cli/tests/: cli_contract.rs
crates/nvbrowser-core/: Cargo.toml
crates/nvbrowser-core/src/: lib.rs  markdown.rs  session.rs  target.rs
crates/nvbrowser-core/src/renderer/: chromium.rs  mod.rs
crates/nvbrowser-core/src/terminal/: kitty.rs
crates/nvbrowser/src/: lib.rs  main.rs
data/html/: calibrate.html  smoke.html
doc/: nvim-browser.txt
docs/: architecture.md  domain.md
docs/plans/: 2026-06-22-nvim-browser-mvp.md  2026-06-22-renderer-session-contract.md
lua/nvim-browser/: address.lua  backend.lua  commands.lua  config.lua  doctor.lua  hints_overlay.lua  init.lua  keymaps.lua  status.lua  terminal.lua
plugin/: nvim-browser.lua
tests/lua/: backend_test.lua  calibration_test.lua  commands_test.lua  config_test.lua  doctor_test.lua  init_api_test.lua  keymaps_test.lua  nvim_smoke_e2e_test.lua  status_test.lua  terminal_overlay_test.lua
