[package]
name = "nvbrowser"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
image = "0.25"
nvbrowser-core = { path = "../nvbrowser-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
